...
            <objects>
                <viewController id="BYZ-38-t0r" customClass="ReverseViewController" customModule="Reverse_words" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Text to reverse" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="6Vh-O9-sC8">
                                <rect key="frame" x="16" y="367.66666666666669" width="361" height="22"/>
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <textInputTraits key="textInputTraits"/>
                                <connections>
                                    <outlet property="delegate" destination="BYZ-38-t0r" id="3XF-JI-h70"/>
                                </connections>
...
                                <rect key="frame" x="25" y="727.66666666666663" width="343" height="60"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="60" id="4tF-gf-vLM"/>
                                </constraints>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Button"/>
                                <buttonConfiguration key="configuration" style="plain" title="Reverse" cornerStyle="large">
                                    <backgroundConfiguration key="background">
                                        <color key="backgroundColor" red="0.0" green="0.46000000000000002" blue="0.89000000000000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                    </backgroundConfiguration>
                                </buttonConfiguration>
                                <connections>
                                    <action selector="reversTextButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Jjf-NC-W8P"/>
...
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="cEb-DH-pxS">
                                <rect key="frame" x="55" y="191" width="282" height="32"/>
                                <segments>
                                    <segment title="Default"/>
                                    <segment title="Custom"/>
                                </segments>
                                <connections>
                                    <action selector="switchReverseType:" destination="i2v-aC-11B" eventType="valueChanged" id="hDg-mk-ju8"/>
                                </connections>
                            </segmentedControl>
                            <textField hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Text to ignor" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Hme-ML-EoJ">
...
                            <constraint firstItem="KAb-3b-zfS" firstAttribute="trailing" secondItem="4Pf-XE-2ec" secondAttribute="trailing" constant="56" id="qCv-j2-CiU"/>
                            <constraint firstItem="oeZ-3B-Rsi" firstAttribute="top" secondItem="Caf-2N-jSt" secondAttribute="bottom" constant="25" id="qwB-D9-Cdb"/>
                            <constraint firstItem="OtT-60-dz3" firstAttribute="leading" secondItem="KAb-3b-zfS" secondAttribute="leading" constant="55" id="ucP-rK-RYf"/>
                            <constraint firstItem="cEb-DH-pxS" firstAttribute="top" secondItem="OtT-60-dz3" secondAttribute="bottom" constant="18" id="yyD-K8-SbX"/>
                        </constraints>
                    </view>
                    <tabBarItem key="tabBarItem" title="Anagrams mod" id="5Hg-KA-4FM"/>
                    <connections>
                        <outlet property="anagramsTextToIgnor" destination="Hme-ML-EoJ" id="S1o-Q3-iNQ"/>
                        <outlet property="anagramsTextToReverse" destination="OtT-60-dz3" id="YH6-bK-FPc"/>
                        <outlet property="resultDescription" destination="4Pf-XE-2ec" id="Ixo-zR-M9g"/>
                        <outlet property="resultTextLable" destination="oeZ-3B-Rsi" id="L6b-A5-yh6"/>
                        <outlet property="switcherMods" destination="cEb-DH-pxS" id="Ipz-Z2-HsR"/>
                        <outlet property="switcherTextType" destination="cEb-DH-pxS" id="8V9-JH-GUu"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="GLF-xi-Jws" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
            </objects>
...
