...
    }
}

extension AnagramsViewController {
    func updateResultLabel() {
        guard let currentTextReverse = anagramsTextToReverse.text else {
            return
        }
        guard let currentTextIgnor = anagramsTextToIgnor.text else {
            return
        }
        let characterSetOfIgnor = CharacterSet(charactersIn: currentTextIgnor)
        let reversedText: String
...
